--- a/css/style.css
+++ b/css/style.css
@@ -44,14 +44,26 @@ footer{
 .btn{
     display: block;
     background-color: white;
-    color: black;
+    color: #23272a;
     border-radius: 20px;
     padding: 10px 12px;
     text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 li{
     list-style: none;
+    font-weight: bold;
+}
+
+li a{
+    color: white;
+    text-decoration: none;    
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 .flexbox{
@@ -60,3 +72,25 @@ li{
     justify-content: space-between;
     align-items: center;
 }
+
+/* HEADER */
+
+header nav.container{
+    padding: 10px 0;
+}
+
+header nav ul{
+    min-width: 500px;
+}
+
+/* .hero{
+    background-image: url('../img/jumbo.png');
+    background-size: contain;
+    height: 710px;
+}
+
+.inner-hero{
+    max-width: 600px;
+    margin: 0 auto;
+    text-align: center;
+} */
