--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 /* colors:
 #3161e0; BLU Header 
 #23272a sort-of-black
-#f6f6f6 GRAY*/
+#f6f6f6 GRAY
+#8ea1e1 lilac button
+#7289da lilac txt footer*/
 
 
 /* UTILITY */
@@ -41,7 +43,7 @@ footer{
     background-color: #f6f6f6;
 }
 
-.btn{
+.btn-small{
     display: block;
     background-color: white;
     color: #23272a;
@@ -51,6 +53,27 @@ footer{
     font-size: 14px;
     font-weight: bold;
 }
+
+.btn-big{
+    display: block;
+    background-color: white;
+    color: #23272a;
+    border-radius: 50px;
+    padding: 20px 30px;
+    text-decoration: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.white{
+
+}
+
+.black{
+    background-color: #23272a;
+    color: white;
+}
+
 
 li{
     list-style: none;
@@ -83,14 +106,41 @@ header nav ul{
     min-width: 500px;
 }
 
-/* .hero{
+.hero{
     background-image: url('../img/jumbo.png');
     background-size: contain;
-    height: 710px;
+    height: 710px; 
+    color: white; 
+
+    position: relative;
 }
 
 .inner-hero{
-    max-width: 600px;
+    max-width: 850px;
     margin: 0 auto;
     text-align: center;
-} */
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.buttons-hero{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+}
+
+h1{
+    font-size: 60px;
+    padding-bottom: 50px;
+}
+
+header p{
+    font-size: 24px;
+    padding-bottom: 25px;
+    line-height: 1.5;
+}
+    
