--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@ footer{
     background-color: #f6f6f6;
 }
 
+/* BUTTONS */
+
 .btn-small{
     display: block;
     background-color: white;
@@ -74,6 +76,7 @@ footer{
     color: white;
 }
 
+/* NAVBAR */
 
 li{
     list-style: none;
@@ -85,7 +88,7 @@ li a{
     text-decoration: none;    
 }
 
-a:hover{
+nav a:hover{
     text-decoration: underline;
 }
 
@@ -99,7 +102,7 @@ a:hover{
 /* HEADER */
 
 header nav.container{
-    padding: 10px 0;
+    padding: 20px 0;
 }
 
 header nav ul{
@@ -117,7 +120,6 @@ header nav ul{
 
 .inner-hero{
     max-width: 850px;
-    margin: 0 auto;
     text-align: center;
 
     position: absolute;
@@ -134,13 +136,15 @@ header nav ul{
 }
 
 h1{
-    font-size: 60px;
+    font-size: 62px;
     padding-bottom: 50px;
 }
 
 header p{
-    font-size: 24px;
+    font-size: 22px;
     padding-bottom: 25px;
     line-height: 1.5;
 }
+
+/*SECTIONS */
     
