--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,7 @@ header p{
 
 .txt{
     max-width: 400px;
+    margin-top: 20px;
 }
 
 main h2{
@@ -170,4 +171,14 @@ main p{
     line-height: 1.5;
 }
 
-
+.flex-container-reverse{
+    width: 80%;
+    margin: 0 auto;
+    padding: 100px 0;
+    color: #23272a;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: flex-start;
+    column-gap: 150px;
+}
