bkg image - hero section - size fix

--- a/css/style.css
+++ b/css/style.css
@@ -109,8 +109,8 @@ header nav ul{
 
 .hero{
     background-image: url('../img/jumbo.png');
-    background-size: contain;
-    height: 445px; 
+    background-size: cover;
+    height: 620px; 
     color: white; 
 
     position: relative;
