--- a/css/style.css
+++ b/css/style.css
@@ -242,11 +242,11 @@ main p{
 }
 
 .lang{
-    background: var(--black);
+     background: var(--black); 
     color: var(--white);
     border: none;
     font-size: 14px;
-
+   
 }
 
 .footer-col h4{
@@ -271,6 +271,7 @@ main p{
 
 .flag{
     height: 18px;
+    vertical-align: middle;
 }
 
 
